[gd_scene load_steps=2 format=3 uid="uid://cl8n4u4d5jwef"]

[ext_resource type="Script" path="res://ui/debug/wfc_debug_view.gd" id="1_wfc_debug"]

[node name="WfcDebugView" type="CanvasLayer"]
layer = 100
script = ExtResource("1_wfc_debug")

[node name="MapDisplay" type="Control" parent="."]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -400.0
offset_top = -300.0
offset_right = 400.0
offset_bottom = 300.0
grow_horizontal = 2
grow_vertical = 2

[node name="Background" type="ColorRect" parent="MapDisplay"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.1, 0.1, 0.1, 0.9)

[node name="StatsPanel" type="PanelContainer" parent="."]
offset_left = 10.0
offset_top = 10.0
offset_right = 310.0
offset_bottom = 310.0

[node name="Background" type="ColorRect" parent="StatsPanel"]
layout_mode = 2
color = Color(0.1, 0.1, 0.1, 0.8)

[node name="StatsLabel" type="Label" parent="StatsPanel"]
layout_mode = 2
theme_override_colors/font_color = Color(0.9, 0.9, 0.9, 1)
theme_override_font_sizes/font_size = 12
text = "[WFC Generation Debug]

Chunks: 0/0
Cells: 0

Press F3 to toggle"
vertical_alignment = 1
